--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://localhost:3307/webdb
-spring.datasource.username=webuser
+spring.datasource.username=webUser
 spring.datasource.password=webuser
 
 logging.level.org.springframework=info
