240509 aws테스트 +build.gradle tasks막아놓음

--- a/build.gradle
+++ b/build.gradle
@@ -66,9 +66,9 @@ dependencies {
 
 }
 
-tasks.named('test') {
-    useJUnitPlatform()
-}
+//tasks.named('test') {
+//    useJUnitPlatform()
+//}
 
 sourceSets {
     main {
